project(only-my-compiler CXX)
cmake_minimum_required(VERSION 3.16)
file(GLOB_RECURSE DIR_SRC "src/*.cpp")
#file(GLOB_RECURSE DIR_LIB_SRC "antlr4-runtime/*.cpp")
add_compile_options(-std=c++17 -O2)
include_directories(src)
#include_directories(antlr4-runtime)
#add_executable(compiler ${DIR_SRC} ${DIR_LIB_SRC})
add_executable(compiler ${DIR_SRC})
target_link_libraries(compiler libantlr4-runtime.so)
